crates/toml_edit/tests/snapshots/invalid/table/empty-implicit-table.stderr
TOML parse error at line 1, column 10
  |
1 | [naughty..naughty]
  |          ^
unquoted keys cannot be empty, expected letters, numbers, `-`, `_`
